finishing first section

--- a/index.html
+++ b/index.html
@@ -34,4 +34,20 @@
             </div>
         </div>
     </header>
+    <section class="hero">
+        <div class="container">
+            <div class="left-side">
+                <h1>
+                    O Hamburguer mais delicioso 😋
+                </h1>
+                <p>
+                    A primeira hamburgueria virtual que você faz o pedido online e come o burguer através do computador
+                </p>
+                <a class="button" href="">Fazer pedido</a>
+            </div>
+            <div class="right-side">
+                <img src="assets/images/heroBurger.png" alt="Hamburguer">
+            </div>
+        </div>
+    </section>
 </body>
