--- a/index.html
+++ b/index.html
@@ -50,4 +50,25 @@
             </div>
         </div>
     </section>
+    <section class="search">
+        <div class="container">
+            <div class="search--title">
+                Pesquise seu <br> Hamburguer favorito
+            </div>
+            <div class="search--sides">
+                <div class="left-side">
+                    <input type="search" placeholder="Digite o nome do burguer">
+                </div>
+                <div class="right-side">
+                    <select>
+                        <option value="">Selecionar categoria</option>
+                        <option value="burgers">Burgers</option>
+                        <option value="pizza">Pizzas</option>
+                        <option value="kids">Kids</option>
+                        <option value="bebidas">Bebidas</option>
+                    </select>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
