--- a/index.html
+++ b/index.html
@@ -143,4 +143,14 @@
             </div>
         </div>
     </main>
+    <footer>
+        <div class="container">
+            <div class="logo">
+                <a href="">B7 <span>•</span> Burguer</a>
+            </div>
+            <a href="https://www.instagram.com/bonieky/" class="copyright">
+                powered by B7Web
+            </a>
+        </div>
+    </footer>
 </body>
